# deployment-2

./: db.sqlite3  pyproject.toml  requirements.txt
account/: forms.py  models.py  views.py
account/migrations/: 0001_initial.py
cart/: admin.py  context_processors.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
checkout/: admin.py  models.py  urls.py  views.py
checkout/migrations/: 0001_initial.py
config/: settings.py  urls.py
store/: admin.py  context_processors.py  models.py  urls.py  views.py
store/management/commands/: brands.py  categories.py  colors.py  products.py  sizes.py
store/migrations/: 0001_initial.py
templates/: base.html
templates/account/: address-list.html  shipping-edit.html  shipping.html  sidebar.html
templates/ajax/: signin.html  validate-change-password.html  validate-reset-password-confirm.html  validate-signup.html
templates/cart/: cart-detail.html  wishlist.html
templates/checkout/: checkout-lists.html  checkout-success.html  checkout.html
templates/store/: category-product.html  home.html  product-detail.html  searching.html  shop.html
templates/store/components/: color_options.html  grid.html  product-modals.html  review_item.html  slider.html
